# hikari

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ISSUES.md  MISC.md  README.md  hikari.sln  index.html  params.json  post-build.bat
engine/: CMakeLists.txt  engine.rc  engine.vcxproj  engine.vcxproj.filters  resource.h
engine/include/hikari/client/: Client.hpp  ClientConfig.hpp  CommandProcessor.hpp  Main.hpp  Services.hpp
engine/include/hikari/client/audio/: AudioService.hpp  GMESoundStream.hpp  NSFSoundStream.hpp  SoundLibrary.hpp
engine/include/hikari/client/game/: BaseTask.hpp  DamageKey.hpp  DamageTable.hpp  Direction.hpp  Effect.hpp  EndingState.hpp  EventBusService.hpp  FadeColorTask.hpp  FunctionTask.hpp  GOCreationParameters.hpp  GameConfig.hpp  GameOverState.hpp  GamePlayState.hpp  GameProgress.hpp  GameStateFactory.hpp  GameWorld.hpp  GuiTestState.hpp  Input.hpp  InputService.hpp  IntroState.hpp  KeyboardInput.hpp  MapTestState.hpp  OptionsState.hpp  PaletteHelpers.hpp  PasswordState.hpp  RealTimeInput.hpp  RefillHealthTask.hpp  ScreenEffectsService.hpp  Shot.hpp  SpawnProjectileWeaponAction.hpp  SpriteTestState.hpp  StageSelectState.hpp  StageSelectStateConfig.hpp  Task.hpp  TitleState.hpp  WaitTask.hpp  Weapon.hpp  WeaponAction.hpp  WeaponGetState.hpp  WeaponTable.hpp
engine/include/hikari/client/game/events/: AudioEventData.hpp  BaseEventData.hpp  DoorEventData.hpp  EntityDamageEventData.hpp  EntityDeathEventData.hpp  EntityStateChangeEventData.hpp  EventBus.hpp  EventBusImpl.hpp  EventData.hpp  EventListenerDelegate.hpp  EventManager.hpp  EventManagerImpl.hpp  GameQuitEventData.hpp  ObjectRemovedEventData.hpp  TransitionCollisionEventData.hpp  WeaponFireEventData.hpp
engine/include/hikari/client/game/objects/: AnimatedSprite.hpp  BlockSequence.hpp  BlockSequenceDescriptor.hpp  BlockTiming.hpp  CollectableItem.hpp  Enemy.hpp  EnemyBrain.hpp  EnemyFactory.hpp  EnemySpawner.hpp  Entity.hpp  EntityDeathType.hpp  Hero.hpp  (+23 more)
engine/include/hikari/client/gui/: BossMenu.hpp  CommandConsole.hpp  EnergyGague.hpp  EnergyGauge.hpp  EnergyMeter.hpp  GuiService.hpp  HikariImageLoader.hpp  Icon.hpp  IconAnimator.hpp  InputHelper.hpp  Menu.hpp  MenuItem.hpp  Orientation.hpp  Panel.hpp  WeaponMenuItem.hpp  Widget.hpp
engine/include/hikari/client/scripting/: AudioServiceScriptProxy.hpp  GamePlayStateScriptProxy.hpp  GameProgressScriptProxy.hpp  SquirrelService.hpp  SquirrelUtils.hpp
engine/include/hikari/core/: Hikari.hpp  Platform.hpp
engine/include/hikari/core/game/: AABBCollision.hpp  Animation.hpp  AnimationFrame.hpp  AnimationLoader.hpp  AnimationPlaybackException.hpp  AnimationSet.hpp  Animator.hpp  CollisionDetector.hpp  CollisionInfo.hpp  CollisionResolver.hpp  Direction.hpp  FadeStateTransition.hpp  GameController.hpp  GameControllerException.hpp  GameState.hpp  Movable.hpp  Renderable.hpp  SliceStateTransition.hpp  SpriteAnimator.hpp  StateTransition.hpp  TileAnimator.hpp  TileMapCollisionResolver.hpp  Updatable.hpp  WorldCollisionResolver.hpp
engine/include/hikari/core/geom/: AABB.hpp  AABBCollisionInfo.hpp  BoundingBox.hpp  GeometryUtils.hpp  Point2D.hpp  Rectangle2D.hpp  RectangleAABB.hpp  Vector2D.hpp
engine/include/hikari/core/gui/: ImageFont.hpp
engine/include/hikari/core/math/: Constants.hpp  FixedPoint.hpp  MathUtils.hpp  NESNumber.hpp  RetroVector.hpp  Vector2.hpp
engine/include/hikari/core/util/: AnimationSetCache.hpp  Cloneable.hpp  FileSystem.hpp  HashedString.hpp  ImageCache.hpp  JsonUtils.hpp  Log.hpp  NonCopyable.hpp  PhysFS.hpp  PhysFSUtils.hpp  RedirectStream.hpp  ReferenceWrapper.hpp  ResourceCache.hpp  Service.hpp  ServiceLocator.hpp  StringUtils.hpp  TeeStream.hpp  TilesetCache.hpp  Timer.hpp
engine/src/hikari/client/: Client.cpp  ClientConfig.cpp  CommandProcessor.cpp  Main.cpp
engine/src/hikari/client/audio/: AudioService.cpp  GMESoundStream.cpp  NSFSoundStream.cpp  SoundLibrary.cpp
engine/src/hikari/client/game/: BaseTask.cpp  DamageTable.cpp  Effect.cpp  EventBusService.cpp  FadeColorTask.cpp  FunctionTask.cpp  GameConfig.cpp  GameData.cpp  GameOverState.cpp  GamePlayState.cpp  GameProgress.cpp  GameWorld.cpp  GuiTestState.cpp  Input.cpp  InputService.cpp  KeyboardInput.cpp  MapTestState.cpp  OptionsState.cpp  PaletteHelpers.cpp  PasswordState.cpp  RealTimeInput.cpp  RefillHealthTask.cpp  ScreenEffectsService.cpp  Shot.cpp  SpawnProjectileWeaponAction.cpp  SpriteTestState.cpp  StageSelectState.cpp  StageSelectStateConfig.cpp  Task.cpp  TitleState.cpp  WaitTask.cpp  Weapon.cpp  WeaponAction.cpp  WeaponGetState.cpp  WeaponTable.cpp
engine/src/hikari/client/gui/: CommandConsole.cpp  EnergyGague.cpp  EnergyGauge.cpp  EnergyMeter.cpp  GuiService.cpp  HikariImageLoader.cpp  Icon.cpp  IconAnimator.cpp  InputHelper.cpp  Menu.cpp  MenuItem.cpp  Panel.cpp  WeaponMenuItem.cpp  Widget.cpp
engine/src/hikari/client/scripting/: AudioServiceScriptProxy.cpp  GamePlayStateScriptProxy.cpp  GameProgressScriptProxy.cpp  SquirrelService.cpp  SquirrelUtils.cpp
engine/src/hikari/core/: Hikari.cpp
engine/src/hikari/core/game/: AABBCollision.cpp  Animation.cpp  AnimationFrame.cpp  AnimationLoader.cpp  AnimationPlaybackException.cpp  AnimationSet.cpp  Animator.cpp  BoundingBox.cpp  CollisionInfo.cpp  Direction.cpp  Faction.cpp  FadeStateTransition.cpp  GameController.cpp  GameControllerException.cpp  GameStateFactory.cpp  Movable.cpp  SliceStateTransition.cpp  SliceStateTransition.hpp  SpriteAnimator.cpp  StateTransition.cpp  TileAnimator.cpp  TileMapCollisionResolver.cpp  WorldCollisionResolver.cpp
engine/src/hikari/core/geom/: AABB.cpp  AABBCollisionInfo.cpp  RectangleAABB.cpp  Vector2D.cpp
engine/src/hikari/core/gui/: ImageFont.cpp
engine/src/hikari/core/math/: NESNumber.cpp  RetroVector.cpp
engine/src/hikari/core/util/: AnimationSetCache.cpp  FileSystem.cpp  HashedString.cpp  ImageCache.cpp  JsonUtil.cpp  Log.cpp  PhysFS.cpp  PhysFSUtils.cpp  RedirectStream.cpp  StringUtils.cpp  TilesetCache.cpp  Timer.cpp
test/: CMakeLists.txt
test/src/test/: TestEventBusImpl.cpp  TestPoint2D.cpp  TestRectangle2D.cpp  TestVector2.cpp
(+332 files in other folders)
